# auction_house_rs

./: Cargo.toml  LICENSE  README.md  build.rs  docker-compose.yaml
proto/backend/: backend.proto  client.proto
proto/session/: backend.proto  client.proto  token_verifier.proto
src/backend/: backend.rs  backend_service.rs  main.rs
src/backend/backend/: auctions_memory_storage.rs  users_memory_storage.rs
src/cli/: commands.rs  main.rs
src/session/: client_session_service.rs  main.rs  token_engine.rs  token_verifier_service.rs  user_credentials.rs  users_storage.rs
src/session/user_credentials/: memory_storage.rs
