[package]
authors = ["Marcin Świerczek <mswierczek90@gmail.com>"]
name = "auction_house_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.10.2"
prost = "0.12.1"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"
clap = { version = "4.4.6", features = ["derive"] }
argon2 = "0.5.2"
jwt = "0.16.0"
sha2 = "0.10.8"
hmac = "0.12.1"

[build-dependencies]
tonic-build = "0.10.0"

[[bin]]
name = "backend"
path = "src/backend/main.rs"

[[bin]]
name = "session"
path = "src/session/main.rs"

[[bin]]
name = "cli"
path = "src/cli/main.rs"
